changed index.html and created a new fold and file in it

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       HELLO GIT!!!
    </div>
    <script src="JavaScript.js"></script>
+   <script src="src/example-cod.js"></script>
 </body>
 
 </html>
