--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
    <div class="git">
       HELLO GIT!!!
+      <div class="git1">i almost finished chapter 2</div>
    </div>
+   <p>work?</p>
+   <div class="text">Just text</div>
    <script src="JavaScript.js"></script>
    <script src="src/example-cod.js"></script>
 </body>
