--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       HELLO GIT!!!
       <div class="git1">i almost finished chapter 2</div>
    </div>
+   <div>hi</div>
    <script src="JavaScript.js"></script>
    <script src="src/example-cod.js"></script>
 </body>
