--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
    <div class="git">
       HELLO GIT!!!
       <div class="git1">i almost finished chapter 2</div>
+      <div class="git1">i almost finished chapter 1</div>
    </div>
-   <div>hi</div>
    <script src="JavaScript.js"></script>
    <script src="src/example-cod.js"></script>
 </body>
