--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <div class="git">
       HELLO GIT!!!
-      <div class="git1">i almost finished chapter 2</div>
+      <div class="git1">i almost finished chter 2</div>
       <div class="git1">i almost finished chapter 1</div>
    </div>
    <script src="JavaScript.js"></script>
