--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       HELLO GIT!!!
       <div class="git1">i almost finished chter 2</div>
       <div class="git1">i almost finished chapter 1</div>
+      dsdsd
    </div>
    <script src="JavaScript.js"></script>
    <script src="src/example-cod.js"></script>
