--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <div class="git">
       HELLO GIT!!!
       <div class="git1">i almost finished chter 2</div>
-      <div class="git1">i almost finished chapter 1</div>
+      <div class="git1">i almosggffggt finished chapter 1</div>
       dsdsd
    </div>
    <script src="JavaScript.js"></script>
