--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
       HELLO GIT!!!
       <div class="git1">i almost finished chter 2</div>
       <div class="git1">i almosggffggt finished chapter 1</div>
-      dsdsd
+      <div class="git1">i almosggffggt finished chapter 1</div>
+      <div class="git1">i almosggffggt finished chapter 1</div>
    </div>
+   <button class="but">Press</button>
    <script src="JavaScript.js"></script>
    <script src="src/example-cod.js"></script>
 </body>
